welcome.lessons.welcome.variables.Variables.scala.error
Variables:1: error: not found: value nbPas
nbPas = 0
^Variables:2: error: value update is not a member of Boolean
while (estSurBiscuit()=0) {
       ^Variables:4: error: not found: value nbPas
	nbPas = nbPas + 1 ;
        ^